# python-devin

./: .gitignore  README.md
week_2/: README.md
week_2/day_1/: README.md  exercise_1.py
week_2/day_1/natan/: exercise_2.py
week_2/day_2/: README.md  fibo.py
week_2/day_2/Eric/: fibonacci.py
week_2/day_2/app/: generate_fake_data.py  pyproject.toml  reader.py
week_2/day_2/breno/: exercicio03.py  exercicio04.py  exercicio05.py
week_2/day_2/data/: exercicio05.py  nomes.txt  usersdata.txt
week_2/day_2/kaua/: fibonacci.py
week_2/day_2/luizgustavo/: exercicio_3.py
week_2/day_2/marcelo/: aula2.py  createjson.py  readnames.py
week_2/day_2/natan/: exercicio3.py  exercicio4.py
week_2/day_2/vinicius/: exercicio-fibonacci.py
week_2/day_3/: README.md
week_2/day_4/: README.md
week_2/day_5/: README.md  main.py
week_2/day_5/poetry_examples/conectanuvem/: pyproject.toml
week_2/day_5/poetry_examples/teste/: requirements.txt
week_2/day_5/poetry_examples/teste2/: pyproject.toml
week_5/: README.md
week_5/day_1/: README.md
week_5/day_1/Exercicio01/: agricultor.py  ferramenta.py  main.py
week_5/day_1/breno_julia/: exercicio01.py
week_5/day_1/slide_examples/: README.md
week_5/day_1/slide_examples/agregacao/: pyproject.toml
week_5/day_2/breno/: exercicio02.py  exercicio03.py
week_5/day_2/slide_examples/agregacao/: main.py
week_5/day_2/slide_examples/composicao/: main.py
week_5/day_2/slide_examples/heranca/: main.py
week_5/day_5/: closure.py  decorador.py  high_order_function.py
week_5/day_5/breno/: exercicio12.py  exercicio13.py
(+12 files in other folders)
