[tool.poetry]
name = "generate-fake-data"
version = "0.1.0"
description = ""
authors = ["Natan Nascimento <natanascimentom@outlook.com>"]

[tool.poetry.scripts]
generator = "generate_fake_data:main"
reader = "reader:main"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^13.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
