[tool.poetry]
name = "app-conectanuvem-class"
version = "0.1.0"
description = "Aplicativo para a turma da conecta nuvem"
authors = ["Natan Nascimento <natan.nascimento@xpi.com.br>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^13.13.0"
pandas = "^1.4.2"
boto3 = "^1.24.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
